Add two-phase extraction progress
* and significantly improved user interface